<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.Questions">

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/Card"
            android:layout_marginTop="@dimen/margin_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/QuestionNumber"
                        android:text="@string/question_1" />

                    <TextView
                        style="@style/Question"
                        android:text="@string/text_question1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q1_a1"
                            android:id="@+id/answer_q1"/>

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q1_a2" />


                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q1_a3" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q1_a4" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/QuestionNumber"
                        android:text="@string/question_2" />

                    <TextView
                        style="@style/Question"
                        android:text="@string/text_question2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q2_a1" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q2_a2"
                            android:id="@+id/answer_q2"/>


                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q2_a3" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q2_a4" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/QuestionNumber"
                        android:text="@string/question_3" />

                    <TextView
                        style="@style/Question"
                        android:text="@string/text_question3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q3_a1" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q3_a2" />


                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q3_a3"
                            android:id="@+id/answer_q3"/>

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q3_a4" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/QuestionNumber"
                        android:text="@string/question_4" />

                    <TextView
                        style="@style/Question"
                        android:text="@string/text_question4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q4_a1" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q4_a2" />


                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q4_a3" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q4_a4"
                            android:id="@+id/answer_q4"/>

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/QuestionNumber"
                        android:text="@string/question_5" />

                    <TextView
                        style="@style/Question"
                        android:text="@string/text_question5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q5_a1"
                            android:id="@+id/answer_q5"/>

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q5_a2" />


                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q5_a3" />

                        <RadioButton
                            style="@style/Answer"
                            android:text="@string/answer_q5_a4" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/confirme_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_button"
            android:onClick="changeSceneq"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/bottom_button_space"/>

    </LinearLayout>

</ScrollView>